@@ -210,8 +210,8 @@ void ERR_load_DH_strings(void);
 
 /* Reason codes. */
 #define DH_R_BAD_GENERATOR				 101
+#define DH_R_MODULUS_TOO_LARGE				 103
 #define DH_R_NO_PRIVATE_VALUE				 100
-#define DH_R_MODULUS_TOO_LARGE                           103
 
 #ifdef  __cplusplus
 }
